--- a/web/angular-wallet/src/app/main/messages/message-view/message-view.component.scss
+++ b/web/angular-wallet/src/app/main/messages/message-view/message-view.component.scss
@@ -78,6 +78,10 @@ message-view {
                         margin: 0;
                     }
 
+                    .lock {
+                        cursor: pointer;
+                    }
+
                     .bubble {
                         position: relative;
                         display: flex;
