--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.scss
@@ -55,4 +55,10 @@
         }
     }
 
+    .mat-column-transaction_id {
+        min-width: 200px;
+    }
+    .mat-column-account {
+        min-width:200px;
+    }
 }
