--- a/web/angular-wallet/src/app/login/login.component.html
+++ b/web/angular-wallet/src/app/login/login.component.html
@@ -17,5 +17,5 @@
       </div>
     </div>
   </div>
-  <div class="login__background"></div>
+  <div class="login__background" id="login-particles"></div>
 </section>
