--- a/web/angular-wallet/src/app/login/login.component.scss
+++ b/web/angular-wallet/src/app/login/login.component.scss
@@ -101,7 +101,7 @@ $text-alt-color: #b3b3b3;
     }
   }
   &__background {
-    background: url('/assets/images/backgrounds/background-login.jpg') center center no-repeat / cover;
+    background-color: #00579D;
     width: calc(100% - 720px);
   }
 }
