new layout for loginscreen

--- a/web/angular-wallet/src/app/login/login.component.html
+++ b/web/angular-wallet/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<section class="login">
+<section class="login" id="login-particles">
   <div class="login__panel">
     <div class="login__header">
       <a [routerLink]="[ '' ]">
@@ -17,5 +17,4 @@
       </div>
     </div>
   </div>
-  <div class="login__background" id="login-particles"></div>
 </section>
