fix(login): remove errant s

--- a/web/angular-wallet/src/app/login/login-passive/login-passive.component.html
+++ b/web/angular-wallet/src/app/login/login-passive/login-passive.component.html
@@ -1,5 +1,5 @@
 <div class="signup">
-s  <header class="signup__header">
+  <header class="signup__header">
       <a [routerLink]="[ '' ]">
         <img alt="Burst logo" class="signup__logo" src="assets/images/logos/logo_blue.png"/>
       </a>
