style(messages): improve pin input in messages

--- a/web/angular-wallet/src/app/main/messages/message-view/message-view.component.scss
+++ b/web/angular-wallet/src/app/main/messages/message-view/message-view.component.scss
@@ -119,6 +119,11 @@ message-view {
                             .time {
                                 margin-left: 12px;
                             }
+
+                            button, input, .mat-form-field.mat-focused .mat-form-field-label {
+                                color: #fff;
+                            }
+
                         }
 
                         &.first-of-group {
