fix(setup): PIN > pin

--- a/web/angular-wallet/src/app/setup/account/create-active/pin/pin.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/pin/pin.component.html
@@ -1,14 +1,14 @@
 <h2>
-    Set your Pin!
+    Set your PIN!
 </h2>
 <div class="pin-container">
     <mat-form-field class="example-full-width">
-        <input matInput type="password" placeholder="Pin" [(ngModel)]="pin">
+        <input matInput type="password" placeholder="PIN" [(ngModel)]="pin">
         <mat-hint>Required</mat-hint>
     </mat-form-field>
 </div>
 <small>
-    Enter a pin to secure your account. The pin is used to verify actions made with your account.
+    Enter a PIN to secure your account. The PIN is used to verify actions made with your account.
 </small>
 <div class="text-center navigation">
     <button class="btn-danger" mat-raised-button (click)="back()">Back</button>
