fix(dashboard): improve display of recent transactions table

--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.scss
@@ -55,13 +55,7 @@
         }
     }
 
-    .mat-column-transaction_id {
-        min-width: 250px;
-    }
-    .mat-column-account {
-        min-width: 275px;
-    }
-    .mat-column-amount {
-        text-align: center;
+    .recent-transactions {
+        overflow-y: auto;
     }
 }
