--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
     <div class="mr-lg-32" fxFlex="100" *ngIf="account">
 
       <div fxLayout="column" fxLayoutAlign="start" fxLayout.gt-sm="row" fxLayoutAlign.gt-sm="start start">
-        <div class="widget" fxFlex="100" fxFlex.gt-sm="40" fxFlex.gt-md="50">
+        <div class="widget" fxFlex="100" fxFlex.gt-sm="40" fxFlex.gt-md="60">
           <!-- TODO: to extract as own component -->
           <div class="fuse-card auto-width mb-32" [ngClass.gt-sm]="'mb-0 mr-32'">
             <div class="p-16" fxLayout="row wrap" fxFlexAlign="center">
@@ -59,7 +59,7 @@
       <div fxLayout="column" fxLayoutAlign="start" fxLayout.gt-sm="row" fxLayoutAlign.gt-sm="start start">
         <div class="widget" fxFlex="100" fxFlex.gt-sm="60">
           <div class="fuse-card auto-width mb-32" [ngClass.gt-sm]="'mb-0 mr-32'">
-            <div class="p-16" fxLayout="column wrap" fxLayoutAlign="start">
+            <div class="p-16 recent-transactions" fxLayout="column wrap" fxLayoutAlign="start">
               <div class="h3 secondary-text">{{ 'recent_transactions' | i18n }}</div>
               <app-transaction-table *ngIf="dataSource && dataSource.data.length"
                 [displayedColumns]="['transaction_id', 'attachment', 'timestamp', 'amount', 'account']"
