--- a/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
+++ b/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
@@ -22,6 +22,7 @@
   <div class=" p-24">
     <mat-tab-group>
       <mat-tab label="{{ 'account_details' | i18n }}">
+        <img [src]="accountQRCodeURL | async" class="qr" />
         <table class="info table">
           <tr *ngFor="let row of getDetailsData()">
             <th>{{ row[0] | i18n }}</th>
