--- a/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.scss
+++ b/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.scss
@@ -10,3 +10,8 @@ th, td {
     word-break: break-word;
     min-width: 200px;
 }
+
+.qr {
+    margin:20px;
+    box-shadow: 0 1px 3px rgba(0,0,0,.5);
+}
