--- a/web/angular-wallet/src/app/main/transactions/transaction-row-value-cell/transaction-row-value-cell.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-row-value-cell/transaction-row-value-cell.component.html
@@ -14,5 +14,17 @@
   <div *ngSwitchCase="'BurstAddress'">
     <a [routerLink]="['/account', convertAddressToNumericId(value)]">{{value}}</a>
   </div>
+  <div *ngSwitchCase="'Asset'">
+    <table>
+      <tr>
+        <th>{{ 'asset_name' | i18n }}</th>
+        <th>{{ 'quantity' | i18n }} (NQT)</th>
+      </tr>
+      <tr *ngFor="let row of value">
+        <td>{{row.asset}}</td>
+        <td>{{row.balanceQNT || row.unconfirmedBalanceQNT}}</td>
+      </tr>
+    </table>
+  </div>
   <div *ngSwitchDefault>{{value | i18n}}</div>
 </div>
