fix(transactions): add min-width to type column

--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.scss
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.scss
@@ -2,6 +2,10 @@
     flex: 0 0 100px;
 }
 
+.mat-column-type {
+    flex: 0 0 150px;
+}
+
 .mat-column-transaction_id {
     flex: 0 0 200px;
     font-size: 1.2rem;
