--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
@@ -45,7 +45,7 @@
 
   <ng-container matColumnDef="amount">
     <mat-header-cell *matHeaderCellDef mat-sort-header>
-      <mat-icon>local_atm</mat-icon>&nbsp;{{ "amount" | i18n }}
+      <mat-icon>local_atm</mat-icon>
     </mat-header-cell>
     <mat-cell *matCellDef="let transaction">
       {{getAmount(transaction) | number: "1.0-8" }}
@@ -97,7 +97,6 @@
   <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
 </mat-table>
 <mat-paginator
-  *ngIf="paginationEnabled"
   #paginator
   [pageSize]="10"
   [pageSizeOptions]="[10, 20, 500]"
