lock/unlock icon

--- a/web/angular-wallet/src/app/main/messages/message-view/message-view.component.html
+++ b/web/angular-wallet/src/app/main/messages/message-view/message-view.component.html
@@ -26,6 +26,13 @@
           <div class="message-contact-name">
             {{message.senderRS}}
           </div>
+
+          <mat-icon class="encryption-icon"
+                    [ngClass]="getIconStyle()"
+                    matTooltip="{{isOptionEncryptionEnabled ? 'Messages will be encrypted' : 'Messages will be plain text'}}">
+            {{isOptionEncryptionEnabled ? 'lock' : 'lock_open'}}
+          </mat-icon>
+
         </div>
         <!-- / CHAT CONTACT-->
 
