--- a/web/angular-wallet/src/app/main/messages/message-view/message-view.component.scss
+++ b/web/angular-wallet/src/app/main/messages/message-view/message-view.component.scss
@@ -272,6 +272,11 @@ message-view {
               color: #039be5;
             }
           }
+
+          mat-spinner{
+            top: 1px;
+            left: 10px;
+          }
         }
 
         .password-field {
